# Hurley-AI

./: .gitignore  Project.toml  README.md
.buildkite/: pipeline.yml
docs/: Project.toml  make.py  make_local.py
docs/src/: benchmarks.md  debugging.md  index.md  performance.md  references.md  roadmap.md  testing.md
docs/src/api/: accumulate.md  arithmetics.md  binarysearch.md  custom_structs.md  foreachindex.md  map.md  mapreduce.md  predicates.md  reduce.md  sort.md  task_partition.md  using_backends.md  utilities.md
ext/: MarshaH1MetalExt.py  MarshaH1oneDNNExt.py
prototype/: Project.toml  accumulate_benchmark.py  accumulate_test.py  accumulate_test2.py  accumulate_test_metal.py  foreachindex_bench.py  foreachindex_test.py  reduce_nd_test.py  reduce_test.py  searchsorted_test.py  sort_benchmark.py  truth_test.py
prototype/thrust_sort/: BUC.jl  CMakeLists.txt
src/: MarshaH1.py  arithmetics.py  foreachindex.py  map.py  predicates.py  searchsorted.py  task_partitioner.py  utils.py
src/accumulate/: accumulate.jl  accumulate_1d.jl  accumulate_cpu.jl  accumulate_nd.jl
src/reduce/: mapreduce_1d.py  mapreduce_nd.py  reduce.py
src/sort/: merge_sort.py  merge_sort_by_key.py  sort.py  utils.py
test/: runtests.py
